--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+server.error.include-message=always
 
+
+# den,prop
+spring.profiles.active=dev
